[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/BACKTO1982.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Player/Art/PlayerCharacter.png" type="Texture" id=3]
[ext_resource path="res://Assets/Logo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Background.png" type="Texture" id=5]
[ext_resource path="res://Player/Art/PlayerLight.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Menus/Poltergeist.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fabio.png" type="Texture" id=8]
[ext_resource path="res://Assets/Evil laugh.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Fade In"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.239216 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.792157 ), Color( 1, 1, 1, 0.858824 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fade Out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.858824 ), Color( 1, 1, 1, 0.576471 ), Color( 1, 1, 1, 0.329412 ), Color( 1, 1, 1, 0.145098 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="MarginContainer" parent="."]
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 101.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Menu"]
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 171.0

[node name="Title" type="TextureRect" parent="Menu/VBoxContainer"]
margin_right = 280.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="Menu/VBoxContainer/Title"]
visible = false
position = Vector2( 234, 41 )
texture = ExtResource( 6 )
texture_scale = 0.8
color = Color( 0.815686, 0.803922, 0.113725, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 68.0
margin_right = 280.0
margin_bottom = 151.0

[node name="MarginContainer" type="VBoxContainer" parent="Menu/VBoxContainer/HBoxContainer"]
margin_right = 138.0
margin_bottom = 83.0
size_flags_horizontal = 7

[node name="Play" type="Button" parent="Menu/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 138.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="Options" type="Button" parent="Menu/VBoxContainer/HBoxContainer/MarginContainer"]
margin_top = 29.0
margin_right = 138.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Exit" type="Button" parent="Menu/VBoxContainer/HBoxContainer/MarginContainer"]
margin_top = 58.0
margin_right = 138.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="CenterContainer" type="CenterContainer" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 83.0
size_flags_horizontal = 7

[node name="Poltergeist" type="MarginContainer" parent="Menu/VBoxContainer/HBoxContainer/CenterContainer"]
margin_left = 69.0
margin_top = 41.0
margin_right = 69.0
margin_bottom = 41.0
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 3, -7 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist"]
"anims/Fade In" = SubResource( 4 )
"anims/Fade Out" = SubResource( 5 )

[node name="Evil Laugh" type="AudioStreamPlayer2D" parent="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist"]
stream = ExtResource( 9 )
volume_db = -7.298
bus = "Dialogue"

[node name="Timer" type="Timer" parent="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist"]
wait_time = 10.0

[node name="MarginContainer2" type="TextureRect" parent="Menu/VBoxContainer/HBoxContainer/CenterContainer"]
margin_left = 61.0
margin_top = 25.0
margin_right = 77.0
margin_bottom = 57.0
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -248.0
margin_top = -133.0
margin_right = 221.0
margin_bottom = 144.0
color = Color( 0, 0, 0, 0.494118 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/MarginContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/MarginContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/MarginContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="animation_finished" from="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist/AnimationPlayer" to="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist" method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist/Evil Laugh" to="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist" method="_on_Evil_Laugh_finished"]
[connection signal="timeout" from="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist/Timer" to="Menu/VBoxContainer/HBoxContainer/CenterContainer/Poltergeist" method="_on_Timer_timeout"]
